--- a/app/src/main/res/menu/menu_search.xml
+++ b/app/src/main/res/menu/menu_search.xml
@@ -4,9 +4,10 @@
     tools:context="com.codepath.nytimessearch.activities.SearchActivity">
     <item
         android:id="@+id/action_settings"
-        android:icon="@drawable/find"
+        android:icon="@drawable/settings"
         android:orderInCategory="100"
         android:title="@string/search"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="ifRoom"
+        android:onClick="onComposeAction"/>
 
 </menu>
